# i-dig-blocks

./: .gitignore  Cargo.toml  README.md  cubedhost.py  main.py
.cargo/: config.toml
src/: commands.rs  cubed_host.rs  handler.rs  main.rs  secrets.rs
