[package]
name = "discord-cubedhost-bot"
version = "0.1.0"
authors = ["andrewtran1995 <andrew.tran345@gmail.com>"]
edition = "2018"

# Instructions on targeting Raspberry Pi 0:
# https://chacin.dev/blog/cross-compiling-rust-for-the-raspberry-pi/
[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[dependencies]
config = "0.10.1"
json = "0.12.4"
reqwest = { version = "0.10.8", features = ["json"] }
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
serenity = "0.9.0-rc.1"
tokio = "0.2.22"