[package]
name = "discord-cubedhost-bot"
version = "0.1.0"
authors = ["andrewtran1995 <andrew.tran345@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrewtran1995/i-dig-blocks"

[dependencies]
config = "0.10.1"
craftping = "*"
json = "0.12.4"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serenity = "0.9.0-rc.1"
tokio = "0.2.22"

[target.arm-unknown-linux-gnueabihf.dependencies]
# openssl-sys is an indirect dependency of reqwest, which is needed
# as a vendored dependency when cross-compiling.
openssl-sys = { version = "*", features = ["vendored"] }

[profile.release]
overflow-checks = true